# rust-joke-generator

./: Cargo.toml  Readme.md  joke_api_server_docs.md  run_all.sh  setup.sh
cli/: app.py
gui/: app.py  notifier.py
gui/templates/: index.html
src/: main.rs
