[package]
name = "joke-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.27", features = ["tokio-comp"] }
tokio = { version = "1.40", features = ["full"] }
once_cell = "1.20"
anyhow = "1.0"
